src-tauri/tests/snapshots/snapshot__ar_payment_summary.snap
---
source: tests/snapshot.rs
expression: result
---
{
  "success": true,
  "message": "Updated 1 invoice(s). 1 fully paid.",
  "data": "Updated 1 invoice(s). 1 fully paid."
}
