src-tauri/tests/snapshots/snapshot__company_after_save.snap
---
source: tests/snapshot.rs
expression: saved
---
{
  "id": "[id]",
  "company_id": 1000,
  "name": "Acme",
  "owner": "Jane",
  "phone": null,
  "email": null,
  "address": null,
  "city": null,
  "zip": null,
  "special_note": null,
  "supervisors": []
}
