src-tauri/tests/snapshots/snapshot__invalid_invoice_result.snap
---
source: tests/snapshot.rs
expression: res
---
{
  "success": false,
  "message": "TodaysDate and WorkDate are required."
}
