src-tauri/tests/snapshots/snapshot__my_company_info_default.snap
---
source: tests/snapshot.rs
expression: info
---
{
  "id": 1,
  "name": "",
  "phone": "",
  "email": "",
  "address": "",
  "zip": "",
  "license_number": ""
}
